--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "backend",
+  "name": "notezipper",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+  },
+  "author": "Tewodros Abebe",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "redux-devtools-extension": "^2.13.9"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TeddyAbebe/Note-Zipper-Server.git"
   },
-  "author": "Tewodros Abebe",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/TeddyAbebe/Note-Zipper-Server/issues"
   },
